Move site files to root for GitHub Pages

--- a/odin-recipes/index.html
+++ b/odin-recipes/index.html
@@ -8,6 +8,7 @@
 <body>
     <h1>Odin Recipes</h1>
 
-    <a href="./macncheese.html"></a>
+    <a href="macncheese.html"> Mac and Cheese Recipe</a>
+    <p><a href="cupcakes.html"> Cupcake Recipe</a></p>
 </body>
 </html>
